--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,9 @@
 {
     "files.associations": {
         "kapassert.h": "c",
-        "kapmemory.h": "c"
+        "kapmemory.h": "c",
+        "text_add_line.C": "cpp",
+        "kaplist.h": "c"
     },
     "C_Cpp.errorSquiggles": "disabled"
 }
