--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -17,3 +17,4 @@ jobs:
           branchName: ${{ github.base_ref }}
           # Optional. Default is `${{ github.token }}`.
           token: ${{ secrets.GITHUB_TOKEN }}
+#tests
