--- a/src/Makefile
+++ b/src/Makefile
@@ -10,7 +10,8 @@ PATH_ALL = ./src/
 include $(PATH_ALL)memory/Makefile
 include $(PATH_ALL)string/Makefile
 include $(PATH_ALL)list/Makefile
+include $(PATH_ALL)kprint/Makefile
 
-SRC = $(SRC_MEMORY) $(SRC_STRING) $(SRC_LIST)
+SRC = $(SRC_MEMORY) $(SRC_STRING) $(SRC_LIST) $(SRC_KPRINTF)
 
 OBJ = $(SRC:.c=.o)
