ADD : str_value_between

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -12,6 +12,7 @@ SRC_TESTS	=	$(PATH_TESTS)kap_string_tests.c			\
 				$(PATH_TESTS)kap_text_tests.c			\
 				$(PATH_TESTS)kap_string_calcul_tests.c	\
 				$(PATH_TESTS)kap_map_tests.c			\
+				#$(PATH_TESTS)kap_yml_parsor_tests.c		\
 				#$(PATH_TESTS)kap_memory_tests.c		\
 
 OBJ_TESTS	=	$(SRC_TESTS:.c=.o)
