--- a/src/string/Makefile
+++ b/src/string/Makefile
@@ -27,6 +27,7 @@ SRC_STRING	=	$(PATH_STRING)string_add.c					\
 				$(PATH_STRING)string_reverse.c				\
 				$(PATH_STRING)string_replace.c				\
 				$(PATH_STRING)string_clear.c				\
+				$(PATH_STRING)string_get_between.c			\
 
 SRC_TEXT	=	$(PATH_TEXT)text_create.c					\
 				$(PATH_TEXT)text_add_line.c					\
