FIX : src of nothing

--- a/src/Makefile
+++ b/src/Makefile
@@ -14,6 +14,7 @@ include $(PATH_ALL)kprint/Makefile
 include $(PATH_ALL)kapparsor/Makefile
 include $(PATH_ALL)math/Makefile
 
-SRC = $(SRC_MEMORY) $(SRC_STRING) $(SRC_LIST) $(SRC_KPRINTF) $(SRC_PARSER) $(SRC_MATH)
+SRC = $(SRC_MEMORY) $(SRC_STRING) $(SRC_LIST) $(SRC_KPRINTF) $(SRC_MATH)
+#SRC += $(SRC_PARSER)
 
 OBJ = $(SRC:.c=.o)
