--- a/src/string/Makefile
+++ b/src/string/Makefile
@@ -28,6 +28,8 @@ SRC_STRING	=	$(PATH_STRING)string_add.c					\
 				$(PATH_STRING)string_replace.c				\
 				$(PATH_STRING)string_clear.c				\
 				$(PATH_STRING)string_get_between.c			\
+				$(PATH_STRING)string_count.c				\
+				$(PATH_STRING)strin_add_begin.c				\
 
 SRC_TEXT	=	$(PATH_TEXT)text_create.c					\
 				$(PATH_TEXT)text_add_line.c					\
