--- a/src/Makefile
+++ b/src/Makefile
@@ -11,10 +11,10 @@ include $(PATH_ALL)memory/Makefile
 include $(PATH_ALL)string/Makefile
 include $(PATH_ALL)list/Makefile
 include $(PATH_ALL)kprint/Makefile
-#include $(PATH_ALL)kapparsor/Makefile
+include $(PATH_ALL)kapparsor/Makefile
 include $(PATH_ALL)math/Makefile
 
 SRC = $(SRC_MEMORY) $(SRC_STRING) $(SRC_LIST) $(SRC_KPRINTF) $(SRC_MATH)
-#SRC += $(SRC_PARSER)
+SRC += $(SRC_PARSER)
 
 OBJ = $(SRC:.c=.o)
