--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,7 +22,7 @@ jobs:
       run: make build_tests
 
     - name: run unit tests
-      run: ./kap_tests
+      run: make start_runnig_tests
     
     - name: run gcovrage
-      run: gcovr -r . -e ./tests/*
+      run: make check_coverage
