--- a/tests/Makefile
+++ b/tests/Makefile
@@ -14,7 +14,7 @@ SRC_TESTS	=	$(PATH_TESTS)kap_string_tests.c			\
 				$(PATH_TESTS)kap_map_tests.c			\
 				$(PATH_TESTS)kap_yml_tests.c			\
 				$(PATH_TESTS)kap_config_test.c			\
-				#$(PATH_TESTS)kap_memory_tests.c		\
+				$(PATH_TESTS)kap_xml_test.c				\
 
 GCOVR_EXCLUDES = 	-e $(PATH_TESTS)kap_string_tests.c			\
 					-e $(PATH_TESTS)kap_string_errors_tests.c	\
@@ -23,5 +23,6 @@ GCOVR_EXCLUDES = 	-e $(PATH_TESTS)kap_string_tests.c			\
 					-e $(PATH_TESTS)kap_map_tests.c				\
 					-e $(PATH_TESTS)kap_yml_tests.c				\
 					-e $(PATH_TESTS)kap_config_test.c			\
+					-e $(PATH_TESTS)kap_xml_test.c				\
 
 OBJ_TESTS	=	$(SRC_TESTS:.c=.o)
