ADD : lowwer hex + print str and char

--- a/src/kprint/Makefile
+++ b/src/kprint/Makefile
@@ -10,6 +10,7 @@ KPRINTF_PATH = ./src/kprint/
 SRC_KPRINTF	=	$(KPRINTF_PATH)kprintf_init.c		\
 				$(KPRINTF_PATH)kprintf_call.c		\
 				$(KPRINTF_PATH)kprintf_put_char.c	\
+				$(KPRINTF_PATH)kprint_put_others.c	\
 
 
 KPRINTF_OBJ	=	$(SRC_KPRINTF:.c=.o)
