ADD : test for kprintf

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -15,6 +15,7 @@ SRC_TESTS	=	$(PATH_TESTS)kap_string_tests.c			\
 				$(PATH_TESTS)kap_yml_tests.c			\
 				$(PATH_TESTS)kap_config_test.c			\
 				$(PATH_TESTS)kap_xml_test.c				\
+				$(PATH_TESTS)kap_printf_tests.c			\
 
 GCOVR_EXCLUDES = 	-e $(PATH_TESTS)kap_string_tests.c			\
 					-e $(PATH_TESTS)kap_string_errors_tests.c	\
@@ -24,5 +25,6 @@ GCOVR_EXCLUDES = 	-e $(PATH_TESTS)kap_string_tests.c			\
 					-e $(PATH_TESTS)kap_yml_tests.c				\
 					-e $(PATH_TESTS)kap_config_test.c			\
 					-e $(PATH_TESTS)kap_xml_test.c				\
+					-e $(PATH_TESTS)kap_printf_tests.c			\
 
 OBJ_TESTS	=	$(SRC_TESTS:.c=.o)
