--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,6 +12,9 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    - uses: testspace-com/setup-testspace@v1
+        with:
+          domain: ${{ github.repository_owner }}
 
     - name: configure
       run: |
