ADD : running tests on testspace implement

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,9 +2,9 @@ name: Unit Tests
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "main", "ft/testsspace" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "main", "ft/testsspace" ]
 
 jobs:
   build:
