--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,7 +25,11 @@ jobs:
       run: make build_tests
 
     - name: run unit tests
-      run: make start_runnig_tests
+      run: |
+        make start_runnig_tests
+        testspace ./result_tests.xml
     
     - name: run gcovrage
-      run: make check_coverage
+      run: |
+        make check_coverage
+        testspace ./result_coverage.xml
