--- a/tests/Makefile
+++ b/tests/Makefile
@@ -16,6 +16,7 @@ SRC_TESTS	=	$(PATH_TESTS)kap_string_tests.c			\
 				$(PATH_TESTS)kap_config_test.c			\
 				$(PATH_TESTS)kap_xml_test.c				\
 				$(PATH_TESTS)kap_printf_tests.c			\
+				$(PATH_TESTS)kap_list_test.c			\
 
 GCOVR_EXCLUDES = 	-e $(PATH_TESTS)kap_string_tests.c			\
 					-e $(PATH_TESTS)kap_string_errors_tests.c	\
@@ -26,5 +27,6 @@ GCOVR_EXCLUDES = 	-e $(PATH_TESTS)kap_string_tests.c			\
 					-e $(PATH_TESTS)kap_config_test.c			\
 					-e $(PATH_TESTS)kap_xml_test.c				\
 					-e $(PATH_TESTS)kap_printf_tests.c			\
+					-e $(PATH_TESTS)kap_list_test.c				\
 
 OBJ_TESTS	=	$(SRC_TESTS:.c=.o)
